code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_137.wast
(assert_invalid
  (module (func $type-break-operand-empty-vs-i64 (result i64)
    (i64.ctz (block (br 0)))
  ))
  "type mismatch"
)